# gxQwen2api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code_issues_summary.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/gx_qwen2api/: account_pool.py  auth.py  auto_refresher.py  call_logger.py  config.py  dispatcher.py  event_logger.py  main.py  message_transform.py  models.py
src/gx_qwen2api/providers/: __init__.py  freebuff.py
src/gx_qwen2api/providers/deepseek/: __init__.py  auth.py  models.py  pow.py  provider.py  tool_calls.py
src/gx_qwen2api/providers/nvidia/: __init__.py  models.py  provider.py
src/gx_qwen2api/routes/: admin.py  chat.py  health.py  models.py
src/gx_qwen2api/static/: admin.html
tests/: test_deepseek_auth.py  test_new_features.py  test_tool_calls.py
