[project]
name = "gx-qwen-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gx_qwen2api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks.check]
sequence = ["format", "lint", "typecheck"]

[tool.poe.tasks.typecheck]
cmd = "pyright"

[tool.poe.tasks.lint]
cmd = "ruff check"

[tool.poe.tasks.format]
cmd = "ruff format"

[tool.pyright]
include = ["src/gx_qwen2api"]
exclude = ["**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
